[package]
name = "rl-toolkit"
version = "0.1.0"
authors = ["Daniel Yarlett <daniel.yarlett@gmail.com>"]
edition = "2018"

[lib]
name = "rltoolkit"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
